--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,7 @@
     }
   ],
   "require": {
-    "yiisoft/yii2": "^2.0.20",
-    "wdmg/yii2-base": "^1.0.1"
+    "yiisoft/yii2": "^2.0.20"
   },
   "minimum-stability": "dev",
   "autoload": {
