--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "keywords": ["yii2", "yii2-rbac", "rbac", "rbac manager", "wdmg"],
   "type": "yii2-extension",
   "license": "MIT",
-  "version": "1.1.8",
+  "version": "1.1.9",
   "homepage": "https://github.com/wdmg/yii2-rbac",
   "support": {
     "source": "https://github.com/wdmg/yii2-rbac",
@@ -21,7 +21,8 @@
     }
   ],
   "require": {
-    "yiisoft/yii2": "^2.0.33"
+    "yiisoft/yii2": "^2.0.33",
+    "wdmg/yii2-base": "^1.1.6"
   },
   "minimum-stability": "dev",
   "autoload": {
